fixing bugs for the entities